--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         #abc{color: teal;}
     </style>
     <meta charset="UTF-8">
-    <title>RYV Singing</title>
+    <title>About</title>
 </head>
 <body style="background-image:url(/DSC03860.JPG) ; background-size: cover ;">
         <a href="/27Dec2025.html">首頁</a>
