src="/場刊 to src="場刊

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <main> 
         <section>
             <p hidden>
-                <a href="/27Dec2025.html">首頁</a>
-                <a id="abc" href="/場刊_RYV Music Show .pdf" target="_blank">音樂會Poster</a>
+                <a href="27Dec2025.html">首頁</a>
+                <a id="abc" href="場刊_RYV Music Show .pdf" target="_blank">音樂會Poster</a>
                 <a href="https://google.com" target="_blank" rel="noopener">在新分頁開啟</a>
                 <a href="https://google.com" target="_self">在同一分頁開啟</a>
         </section>
@@ -40,7 +40,7 @@
         </section>
 
         <section>
-                <img src="/場刊_QR Code.jpg" alt="場刊QR code"><br>
+                <img src="場刊_QR Code.jpg" alt="場刊QR code"><br>
         <section>
             <!-- CTA 按鈕 -->
              <a href="/signup" class="cta-button">立即報名</a>
