Capito letter "RYV SINGING"

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Hearder-->
     <header>
     <nav>
-        <h1>RYV Singing</h1>
+        <h1>RYV SINGING</h1>
     </nav> <!--捜尋SEO 更易曝光-->
     </header>
 
