Update index.html_11 Jan 2026

--- a/index.html
+++ b/index.html
@@ -7,51 +7,74 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-
+<style>    
+.invisible { visibility: hidden
+    <!--Hearder-->
+    <header>
+        <nav>
+            <h1>RYV SINGING</h1>
+        </nav> <!--捜尋SEO 更易曝光--> 
+     </header></p>
+;}
+</style>
 
 <body>
    
-    <!--Hearder-->
-    <header>
-    <nav>
-        <h1>RYV SINGING</h1>
-    </nav> <!--捜尋SEO 更易曝光-->
-    </header>
+
 
     <!--Main-->
     <main> 
         <section>
             <p hidden>
-                <a href="27Dec2025.html">首頁</a>
-                <a id="abc" href="場刊_RYV Music Show .pdf" target="_blank">音樂會Poster</a>
+                <a href="/27Dec2025.html">首頁</a>
+                <a id="abc" href="/場刊_RYV Music Show .pdf" target="_blank">音樂會Poster</a>
                 <a href="https://google.com" target="_blank" rel="noopener">在新分頁開啟</a>
                 <a href="https://google.com" target="_self">在同一分頁開啟</a>
         </section>
 
         <section>
-            <h1>即興和音 入門班</h1>
-            <p><em>解鎖你的<strong>「和聲聽力」</strong>與</strong><strong>「即興力」</strong></em></p>
+            <h1>解鎖你嘅「和聲聽力」與<strong>「即興力」</strong></h1>
+            <h2>即興和音<strong>三大</strong>元素：<br>《助攻型和音》、《雙主音》、《花式和音》</h2>
+           <iframe src="https://www.youtube.com/embed/Lk0YUuwK-VM?si=x5J9ChWJENr8HFvp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+
+        <section>
+            <!-- CTA 按鈕 -->
+             <a href="/signup" class="cta-button">立即報名 <br>--> Whatsapp</a>
+        </section><br>
+
+        <section>
+            <h2>=========== RYV 合唱作品 ============</h2><br>
             <iframe src="https://www.youtube.com/embed/U4ELbz2MiL8?si=o3vpFF7qEVf6A6em" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; picture-in-picture; gyroscope; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
-        <section>
-            <!-- CTA 按鈕 -->
-             <a href="/signup" class="cta-button">立即報名</a>
-        </section>
 
+
+        <section>
+            <iframe src="https://www.youtube.com/embed/u6f3nJ-8cmk?si=205P9PijMLS84LWq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section><br>
+
+    <style>    .invisible { visibility: hidden
         <section>
                 <img src="場刊_QR Code.jpg" alt="場刊QR code"><br>
         <section>
+    ;}
+    </style>
+
+        <section>
             <!-- CTA 按鈕 -->
-             <a href="/signup" class="cta-button">立即報名</a>
-        </section>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKYuEalEOnUSOeALyGO5QumF_o0ckqSI7wOA&s"alt="RYV Singing Logo"><br>
-        </section>
+             <a href="/signup" class="cta-button">立即報名  <br>--> 流行和音 入門班</a>
+        </section><br>
+        <section>
+            <h2>====== 駐團編曲人 Geoffrey 編曲作品 =======</h2><br>
+            <iframe src="https://www.youtube.com/embed/ozDkOLBfz4o?si=o6HCcKGkcxnyUbB3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section><br>
+
         
         <section>
             <!-- CTA 按鈕 -->
-             <a href="/signup" class="cta-button">立即報名</a>
-        </section>
+             <a href="/signup" class="cta-button">立即報名  <br>--> 流行和音 入門班</a>
+        </section><br>
     </main>
 
     <!--Footer-->
