--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 
         <section>
             <h2>=========== RYV 合唱作品 ============</h2><br>
+            <!--永不失聯的愛-->
+            <iframe src="https://www.youtube.com/embed/uGqpgFvBkac?si=o-EZpglywrL-y1ak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        <section></section>
+            <!--會再見的-->
             <iframe src="https://www.youtube.com/embed/U4ELbz2MiL8?si=o3vpFF7qEVf6A6em" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; picture-in-picture; gyroscope; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
@@ -70,8 +75,16 @@
             <iframe src="https://www.youtube.com/embed/ozDkOLBfz4o?si=o6HCcKGkcxnyUbB3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section><br>
 
-        
         <section>
+            <img src="Video list.png" alt="Video List" style="opacity: 0.9;">
+        </section>
+
+        <section>
+            <h2>====== RYV 2025音樂會 =======</h2><br> 
+           <img src="大合照_RYV 2025音樂會.jpg" alt="RYV 2025音樂會";>
+        </section>
+
+        <section><br>
             <!-- CTA 按鈕 -->
              <a href="/signup" class="cta-button">立即報名  <br>--> 流行和音 入門班</a>
         </section><br>
